--- a/css/animation.css
+++ b/css/animation.css
@@ -23,3 +23,25 @@
 
 .up   { animation: up 0.4s ease 0s 1 normal forwards; }
 .down { animation: down 0.4s ease 0s 1 normal forwards; }
+
+button { position: absolute; }
+
+#close {
+    top:  0%;
+    left: 0%;
+    margin-top:  30px;
+    margin-left: 30px;
+}
+
+#again {
+    bottom: 0%;
+    right:  0%;
+    margin-bottom: 30px;
+    margin-right:  30px;
+}
+
+#again:disabled,
+#again:disabled:hover {
+    color: #44444444;
+    background: #44444444;
+}
